# dev-day-demos

./: .gitignore  README.md
call-moderation/: README.md
call-moderation/driver-agent/: README.md  pyproject.toml
call-moderation/frontend/: README.md  app-config.ts  pnpm-lock.yaml
call-moderation/moderation-agent/: README.md  livekit.toml  pyproject.toml
call-queue/: README.md
call-queue/frontend/: README.md  app-config.ts  package.json  pnpm-lock.yaml
call-queue/survey-agent/: README.md  livekit.toml  pyproject.toml
drive-thru/: README.md
drive-thru/drive-thru-agent/: README.md  livekit.toml  pyproject.toml
drive-thru/frontend/: README.md  app-config.ts  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
exa-deep-researcher/: README.md  agent.py  orchestrator.py
exa-deep-researcher/agent/: prompts.py
exa-deep-researcher/frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml
model-battleground/: README.md
model-battleground/battleground-agent/: README.md  (+3 more)
model-battleground/battleground-agent-2/: README.md  livekit.toml  pyproject.toml
model-battleground/battleground-agent-3/extensions/: LICENSE  pyproject.toml
model-battleground/battleground-agent-3/extensions/livekit_ext/: deepseek_think.py  discovery.py  image_processor.py  registry.py
model-battleground/battleground-agent-3/extensions/livekit_ext/tests/: test_livekit_ext.py
shared/: package.json
teleoperation/: .env.example  .gitignore  README.md  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
todo-app/: README.md
(+96 files in other folders)
