[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "livekit-agents-extensions"
version = "0.1.0"
description = "Lightweight extension helpers for LiveKit Agents."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "ShayneP" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = []

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/ShayneP"
Source = "https://github.com/ShayneP/livekit-agents-extensions"

[tool.setuptools.packages.find]
include = ["livekit_ext*"]

[tool.setuptools.package-data]
"livekit_ext" = ["py.typed"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
pythonpath = ["."]
